<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/ll1_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText1_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText1_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText1_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText1_small_subtext"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/edText4_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edText4_small_subtext"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1_small" />

    <LinearLayout
        android:id="@+id/ll2_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ll1_small"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText2_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText2_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText2_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText2_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/ll2_small"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText3_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText3_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText3_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText3_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/ll4_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edText4_small">

        <TextView
            android:id="@+id/tvText5_small1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText5_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText5_small1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText5_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
