<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:id="@+id/ll4_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText5_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText5_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText5_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText5_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ll4_small"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText6_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText6_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText6_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText6_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll6_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/ll5_small"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText7_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText7_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText7_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText7_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll7_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll4_small">

        <TextView
            android:id="@+id/tvText8_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvText8_small_text"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edText8_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edText8_small_subtext"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/edText9_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edText9_small_subtext"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll7_small" />

</androidx.constraintlayout.widget.ConstraintLayout>
