<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_list"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="130dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_list"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView">

        <LinearLayout
            android:id="@+id/ll1_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvText1_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText1_list_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText1_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText1_list_subtext"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edText4_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edText4_list_subtext"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll1_list" />

        <LinearLayout
            android:id="@+id/ll2_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/ll1_list"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvText2_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText2_list_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText2_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText2_list_subtext"
                android:inputType="date"
                android:maxLength="10"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toEndOf="@+id/ll2_list"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvText3_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText3_list_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText3_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText3_list_subtext"
                android:inputType="textCapSentences"
                android:maxLength="64"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edText4_list">

            <TextView
                android:id="@+id/tvText5_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText5_list2_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText5_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText5_list2_subtext"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="10sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="4dp"
            android:text="@string/button_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:text="@string/button_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textStyle="italic"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />


</androidx.constraintlayout.widget.ConstraintLayout>