<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_list2"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:layout_marginTop="130dp"
        android:id="@+id/listView2"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_list2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView2">

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="4dp"
            android:text="@string/button_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:text="@string/button_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEdit" />

        <LinearLayout
            android:id="@+id/ll4_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvText5_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText5_list2_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText5_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText5_list2_subtext"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/ll4_list2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvText6_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText6_list2_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText6_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText6_list2_subtext"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll6_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/ll5_list2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvText7_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText7_list2_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText7_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText7_list2_subtext"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll7_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll4_list2">

            <TextView
                android:id="@+id/tvText8_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edText8_list2_text"
                android:textSize="10sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edText8_list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edText8_list2_subtext"
                android:inputType="textPostalAddress"
                android:maxLength="64"
                android:textSize="10sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edText9_list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edText9_list2_subtext"
            android:inputType="textCapWords"
            android:maxLength="35"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll7_list2" />

        <Button
            android:id="@+id/buttonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="28dp"
            android:text="@string/button_map"
            app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textStyle="italic"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView2" />


</androidx.constraintlayout.widget.ConstraintLayout>